--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>TREE Starter</title>
+    <title>Lab</title>
   </head>
   <body>
     <div id="root"></div>
